# akira

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
akira/: __init__.py  scan.py
akira/attacks/: __init__.py  magic_string.py
akira/attacks/magic_string/: __init__.py  attack.py
akira/cli/: __init__.py  console.py  main.py
akira/core/: __init__.py  decorator.py  fuzzy.py  module.py  registry.py  session.py  storage.py  target.py
akira/modules/: __init__.py
akira/modules/dos/: __init__.py  magic_string.py
akira/modules/extraction/: __init__.py  system_prompt.py
akira/modules/injection/: __init__.py  basic_injection.py
akira/modules/jailbreak/: __init__.py  dan.py
akira/repository/: __init__.py  manager.py
akira/targets/: __init__.py  anthropic.py  api.py  aws.py  factory.py  huggingface.py  openai.py
akira/utils/: __init__.py
attacks/dos/: claude_magic_string.yaml
docs/: book.toml
docs/book/: 404.html  changelog.html  index.html  print.html  searchindex.js  toc.html  toc.js
docs/book/development/: architecture.html  contributing.html  rust.html  writing-modules.html  writing-targets.html
docs/book/getting-started/: concepts.html  installation.html  quick-start.html
docs/book/modules/: dos.html  extraction.html  injection.html  jailbreak.html  overview.html
docs/book/reference/: cli.html  commands.html  configuration.html  storage.html
docs/book/using-akira/: console.html  profiles.html  running-attacks.html  search.html  targets.html
docs/book/using-akira/targets/: anthropic.html  api.html  aws.html  huggingface.html  openai.html
docs/src/: 404.md  SUMMARY.md  changelog.md  index.md
docs/src/development/: architecture.md  contributing.md  rust.md  writing-modules.md  writing-targets.md
docs/src/getting-started/: concepts.md  installation.md  quick-start.md
docs/src/modules/: dos.md  extraction.md  injection.md  jailbreak.md  overview.md
docs/src/reference/: cli.md  commands.md  configuration.md  storage.md
docs/src/using-akira/: console.md  profiles.md  running-attacks.md  search.md  targets.md
docs/src/using-akira/targets/: anthropic.md  api.md  aws.md  huggingface.md  openai.md
rust/: Cargo.toml  pyproject.toml
rust/src/: analyzer.rs  fuzzer.rs  fuzzy.rs  lib.rs  matcher.rs
tests/: __init__.py  test_core.py
