[project]
name = "akira-security"
version = "0.1.0"
description = "Test your AI deployments against security vulnerabilities."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Sarthak Munshi <s@hanshiro.dev>" }]
keywords = [
    "llm",
    "security",
    "ai",
    "pentesting",
    "vulnerability",
    "prompt-injection",
    "jailbreak",
    "red-team",
    "anthropic",
    "openai",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "prompt-toolkit>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]
aws = [
    "boto3>=1.34.0",
]
huggingface = [
    "huggingface-hub>=0.20.0",
]
all = [
    "boto3>=1.34.0",
    "huggingface-hub>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/akira-security/akira"
Documentation = "https://github.com/akira-security/akira#readme"
Repository = "https://github.com/akira-security/akira"
Issues = "https://github.com/akira-security/akira/issues"

[project.scripts]
akira = "akira.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["akira"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
