[package]
name = "akira-core"
version = "0.1.0"
edition = "2021"
description = "High-performance core for Akira LLM security framework"

[lib]
name = "akira_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
rayon = "1.10"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
aho-corasick = "1.1"  # Fast multi-pattern matching
